Add option to use external networks

--- a/docker-setup/keycloak/.env
+++ b/docker-setup/keycloak/.env
@@ -4,4 +4,4 @@ DATABASE_PASSWORD=""
 KEYCLOAK_ADMIN="admin"
 KEYCLOAK_ADMIN_PASSWORD=""
 KEYCLOAK_USER="user"
-KEYCLOAK_PASSWORD=""
+USE_EXTERNAL_PMD_DS_NETWORK="false"
