--- a/docker-setup/keycloak/compose.yaml
+++ b/docker-setup/keycloak/compose.yaml
@@ -51,6 +51,8 @@ services:
       - KEYCLOAK_ADMIN
       - KEYCLOAK_ADMIN_PASSWORD
       - ACCESS_TOKEN
+    networks:
+      - internal
   
   jq:
     image: stedolan/jq
