--- a/docker-setup/keycloak/Dockerfile
+++ b/docker-setup/keycloak/Dockerfile
@@ -1,5 +1,6 @@
 FROM registry.access.redhat.com/ubi9 AS ubi-micro-build
 RUN mkdir -p /mnt/rootfs
+# Install curl and jq
 RUN dnf install --installroot /mnt/rootfs curl jq --releasever 9 --setopt install_weak_deps=false --nodocs -y; dnf --installroot /mnt/rootfs clean all
 
 FROM quay.io/keycloak/keycloak:latest as builder
@@ -7,10 +8,6 @@ FROM quay.io/keycloak/keycloak:latest as builder
 # Enable health and metrics support
 ENV KC_HEALTH_ENABLED=true
 ENV KC_METRICS_ENABLED=true
-
-# Configure a database vendor
-# ARG KC_DB
-# ENV KC_DB=${KC_DB}
 
 WORKDIR /opt/keycloak
 # for demonstration purposes only, please make sure to use proper certificates in production instead
@@ -21,13 +18,5 @@ FROM quay.io/keycloak/keycloak:latest
 COPY --from=builder /opt/keycloak/ /opt/keycloak/
 COPY --from=ubi-micro-build /mnt/rootfs /
 
-# change these values to point to a running postgres instance
-# ENV KC_DB=${KC_DB}
-# ARG KC_DB_URL
-# ENV KC_DB_URL=${KC_DB_URL}
-# ARG KC_DB_USERNAME
-# ENV KC_DB_USERNAME=${KC_DB_USERNAME}
-# ARG KC_DB_PASSWORD
-# ENV KC_DB_PASSWORD=${KC_DB_PASSWORD}
 ENV KC_HOSTNAME=localhost
 ENTRYPOINT ["/opt/keycloak/bin/kc.sh"]
