Add optional command to run keycloak in dev mode
Signed-off-by: Kirill Bulert <bulert@infai.org>

--- a/docker-setup/keycloak/compose.yaml
+++ b/docker-setup/keycloak/compose.yaml
@@ -14,7 +14,8 @@ services:
     build:
       dockerfile: Dockerfile
     command: ["start", "--optimized", "--http-enabled", "true"]
-        # - start-dev
+    # command: 
+    #   - start-dev
     environment:
       - DB_VENDOR=POSTGRES
       - DB_ADDR=keycloak-db
