--- a/docker-setup/keycloak/Dockerfile
+++ b/docker-setup/keycloak/Dockerfile
@@ -20,14 +20,15 @@ ENV KC_METRICS_ENABLED=true
 
 WORKDIR /opt/keycloak
 # for demonstration purposes only, please make sure to use proper certificates in production instead
-RUN keytool -genkeypair -storepass password -storetype PKCS12 -keyalg RSA -keysize 2048 -dname "CN=server" -alias server -ext "SAN:c=DNS:localhost,IP:127.0.0.1" -keystore conf/server.keystore
+RUN keytool -genkeypair -storepass password -storetype PKCS12 -keyalg RSA -keysize 2048 -dname "CN=server" -alias server -ext "SAN:c=DNS:keycloak,IP:127.0.0.1" -keystore conf/server.keystore
 RUN /opt/keycloak/bin/kc.sh build
 
 FROM quay.io/keycloak/keycloak:latest
 COPY --from=builder /opt/keycloak/ /opt/keycloak/
 COPY --from=ubi-micro-build /mnt/rootfs /
 
-HEALTHCHECK --interval=5s CMD test "$(curl -k -s --fail https://localhost:8443/health/live | jq -r .status)" = "UP"
+# HEALTHCHECK --interval=5s CMD test "$(curl -k -s --fail https://localhost:8443/health/live | jq -r .status)" = "UP"
+HEALTHCHECK --interval=5s CMD test "$(curl -k -s --fail http://localhost:8080/health/live | jq -r .status)" = "UP"
 # HEALTHCHECK --interval=5s --timeout=10s --start-period=5s CMD test "$(curl -k -s --fail https://localhost:8443/health/live | jq -r .status)" = "UP"
 
 ENV KC_HOSTNAME=localhost
